--- a/19-Webcam-Fun/package.json
+++ b/19-Webcam-Fun/package.json
@@ -1,22 +1,13 @@
 {
-  "name": "static",
+  "name": "gum",
   "version": "1.0.0",
-  "description": "This is a static template with no bundling",
-  "main": "index.html",
+  "description": "",
+  "main": "scripts.js",
   "scripts": {
     "start": "browser-sync start --server --files \"*.css, *.html, *.js\""
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/codesandbox-app/static-template.git"
-  },
-  "keywords": ["template", "codesandbox", "static"],
-  "author": "Ives van Hoorne",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/codesandbox-app/static-template/issues"
-  },
-  "homepage": "https://github.com/codesandbox-app/static-template#readme",
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.12.5 <2.23.2"
   }
